Make ConfigurationFactory injectable
This allows for a ConfigurationFactory binding to be registered as well as generally participate in dependency injection.

Signed-off-by: Matt Sicker <mattsicker@apache.org>