@@ -16,22 +16,6 @@
  */
 package org.apache.logging.log4j.spring.boot;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLConnection;
-import java.net.URLDecoder;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Properties;
-import javax.net.ssl.HttpsURLConnection;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.core.LoggerContext;
@@ -44,7 +28,6 @@ import org.apache.logging.log4j.core.net.ssl.LaxHostnameVerifier;
 import org.apache.logging.log4j.core.net.ssl.SslConfiguration;
 import org.apache.logging.log4j.core.net.ssl.SslConfigurationFactory;
 import org.apache.logging.log4j.core.util.AuthorizationProvider;
-import org.apache.logging.log4j.core.util.BasicAuthorizationProvider;
 import org.apache.logging.log4j.core.util.FileUtils;
 import org.apache.logging.log4j.status.StatusLogger;
 import org.apache.logging.log4j.util.PropertiesUtil;
@@ -55,6 +38,21 @@ import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
 import org.springframework.util.ResourceUtils;
 
+import javax.net.ssl.HttpsURLConnection;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.URLConnection;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Properties;
+
 /**
  * Override Spring's implementation of the Log4j 2 Logging System to properly support Spring Cloud Config.
  */
@@ -62,7 +60,7 @@ public class Log4j2CloudConfigLoggingSystem extends Log4J2LoggingSystem {
     private static final String HTTPS = "https";
     public static final String ENVIRONMENT_KEY = "SpringEnvironment";
     private static final String OVERRIDE_PARAM = "override";
-    private static Logger LOGGER = StatusLogger.getLogger();
+    private static final Logger LOGGER = StatusLogger.getLogger();
 
     public Log4j2CloudConfigLoggingSystem(ClassLoader loader) {
         super(loader);
@@ -116,20 +114,21 @@ public class Log4j2CloudConfigLoggingSystem extends Log4J2LoggingSystem {
     protected void loadConfiguration(String location, LogFile logFile) {
         Assert.notNull(location, "Location must not be null");
         try {
-            LoggerContext ctx = getLoggerContext();
-            String[] locations = parseConfigLocations(location);
+            final LoggerContext ctx = getLoggerContext();
+            final ConfigurationFactory factory = ctx.getInjector().getInstance(ConfigurationFactory.KEY);
+            final String[] locations = parseConfigLocations(location);
             if (locations.length == 1) {
                 final URL url = ResourceUtils.getURL(location);
                 final ConfigurationSource source = getConfigurationSource(url);
                 if (source != null) {
-                    ctx.start(ConfigurationFactory.getInstance().getConfiguration(ctx, source));
+                    ctx.start(factory.getConfiguration(ctx, source));
                 }
             } else {
                 final List<AbstractConfiguration> configs = new ArrayList<>();
                 for (final String sourceLocation : locations) {
                     final ConfigurationSource source = getConfigurationSource(ResourceUtils.getURL(sourceLocation));
                     if (source != null) {
-                        final Configuration config = ConfigurationFactory.getInstance().getConfiguration(ctx, source);
+                        final Configuration config = factory.getConfiguration(ctx, source);
                         if (config instanceof AbstractConfiguration) {
                             configs.add((AbstractConfiguration) config);
                         } else {
@@ -167,13 +166,9 @@ public class Log4j2CloudConfigLoggingSystem extends Log4J2LoggingSystem {
                 final String[] pairs = url.getQuery().split("&");
                 for (String pair : pairs) {
                     final int idx = pair.indexOf("=");
-                    try {
-                        final String key = idx > 0 ? URLDecoder.decode(pair.substring(0, idx), "UTF-8") : pair;
-                        if (key.equalsIgnoreCase(OVERRIDE_PARAM)) {
-                            locations.add(URLDecoder.decode(pair.substring(idx + 1), "UTF-8"));
-                        }
-                    } catch (UnsupportedEncodingException ex) {
-                        LOGGER.warn("Bad data in configuration string: {}", pair);
+                    final String key = idx > 0 ? URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8) : pair;
+                    if (key.equalsIgnoreCase(OVERRIDE_PARAM)) {
+                        locations.add(URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8));
                     }
                 }
                 return locations.toArray(new String[0]);
